# 8mulator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: chip8.hpp  cpu.hpp  gui.hpp  io.hpp  utilities.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: chip8.cpp  cpu.cpp  gui.cpp  io.cpp  main.cpp  utilities.cpp
